fix(Icon): high-contrast - revert force canvas background

--- a/src/components/Icon/Icon.style.scss
+++ b/src/components/Icon/Icon.style.scss
@@ -194,15 +194,6 @@ svg.md-icon-coloured {
   height: fit-content;
   justify-content: center;
   width: fit-content;
-
-  @media (forced-colors: active) {
-    background: Canvas !important;
-
-    svg {
-      fill: CanvasText !important;
-      stroke: CanvasText !important;
-    }
-  }
 }
 
 .md-icon-not-found {
